Revision history for mojo-checkbot

0.06 2011/10/21
  - Behaves better on illigal rel path
  = fixed a bug on ua handling
  - Also checks ftp scheme
  - Also checks area tags

0.05 2011/10/21
  - Got better charset guessing
  - Right base url on redirect
  - Mojolicious 2.03 bundled

0.04 2011/10/21
  - img, link, script tags are also checked

0.03 2011/10/20
  - charset defaults to 'utf-8'

0.02 2011/10/20
  - charset is respected

0.01 2011/10/18
  - initial release