@@ -18,6 +18,10 @@ $(function() {
                 newTr.append('<td>' + (data.resolvedURI || '-') + '</td>');
                 newTr.append('<td>' + (data.res || '-') + '</td>');
                 newTr.append('<td>' + (data.referer || '-') + '</td>');
+                if ($("#hide2xx").get(0).checked && status.match(/2../)) {
+                    console.log('a');
+                    newTr.addClass('hidden');
+                }
                 $("#result tbody").prepend(newTr);
                 status_statistics[status] = (status_statistics[status] || 0) + 1;
                 var summaryCont = $("#summary");
@@ -45,5 +49,13 @@ $(function() {
         $('#trLightbox .statusCode textarea').html(tmp.eq(3).html());
         $('#trLightbox .referer textarea').html(tmp.eq(4).html());
         $.lightbox("#trLightbox").show();
+    });
+    
+    $("#hide2xx").bind('change', function() {
+        if (this.checked) {
+            $("tr.res2xx").addClass('hidden');
+        } else {
+            $("tr.res2xx").removeClass('hidden');
+        }
     });
 });
